--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-<script src="thirukural.js"></script>
+<script src="index.js"></script>
 <!-- <script src="index.js"></script> -->
 </body>
 
